# adventofcode2022

./: .gitignore
day1/: pom.xml
day1/src/main/kotlin/: Elf.kt  Main.kt  Parser.kt
day1/src/test/kotlin/: ParserTest.kt
day2/: package-lock.json  package.json  tsconfig.json
day2/src/: main.ts
day3/: main.py  pyproject.toml  test_main.py  utils.py
kotlin/src/main/kotlin/day1/: Elf.kt  Main.kt  Parser.kt
kotlin/src/main/kotlin/day14/: Board.kt  Main.kt
kotlin/src/main/kotlin/day15/: Board.kt  Main.kt
kotlin/src/main/kotlin/day6/: Datastream.kt  Main.kt
kotlin/src/test/kotlin/day1/: ParserTest.kt
kotlin/src/test/kotlin/day6/: DatastreamTest.kt
python/: pyproject.toml
python/day3/: day3.py
python/day3/test/: test_day3.py
python/day4/: day4.py
python/day4/test/: test_day4.py
python/utils/: __init__.py
scala/: build.sbt
scala/.bsp/: sbt.json
scala/src/main/scala/day11/: day11.scala
scala/src/main/scala/day12/: day12.scala
scala/src/main/scala/day8/: day8.scala  main.scala
scala/src/main/scala/day9/: day9.scala
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/day10/: commands.ts  crt.ts  day10.spec.ts  day10.ts  main.ts  types.ts
typescript/src/day13/: day13.spec.ts  day13.ts  main.ts
typescript/src/day14/: day14.ts  main.ts
typescript/src/day18/: day18.ts  main.ts
typescript/src/day2/: day2.ts
typescript/src/day5/: day5.spec.ts  day5.ts
typescript/src/day5/__snapshots__/: day5.spec.ts.snap
typescript/src/day6/: day6.spec.ts  day6.ts  main.ts
typescript/src/utils/: index.ts
(+3 files in other folders)
